# miden-testnet-bridge

./: .env.anvil.example  .env.example  .env.sepolia.example  .gitignore  AGENT.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.miden-node  LICENSE  Makefile  README.md  compose.local.yml  compose.sepolia.yaml  compose.yaml
.github/workflows/: ci.yml
contracts/: MockERC20.sol
docs/: E2E_HANDOFF.md  RUNBOOK.md  SUNSET.md  architecture.md  builder-testing-guide.md  miden-frontend-integration.md  openapi.yaml  smoke-test-report.html  wallet-bridge-clarity.md  wallet-chat-bridge-mega-prompt.md
docs/anvil/: local-sandbox.md
frontend/: .dockerignore  Dockerfile  README.md  next.config.mjs  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/bridge/[...path]/: route.ts
frontend/app/components/: BridgeLab.tsx  FlowDetail.tsx
frontend/app/flows/[id]/: page.tsx
frontend/app/guides/agglayer/: page.tsx
frontend/app/guides/near-intents/: page.tsx
frontend/app/health/: route.ts
frontend/app/lib/: bridge.ts  wallet.test.ts  wallet.ts
frontend/docs/: agglayer-bali.md  miden-frontend-integration.md  product-requirements.md
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/activity/[id]/: page.tsx
frontend/src/app/components/: ActivityDetail.tsx  BridgeExperience.tsx  MidenWalletButton.tsx
frontend/src/app/health/: route.ts
frontend/src/app/lib/: agglayer.ts  bridge-monitor.test.ts  bridge-monitor.ts  bridge-state.ts  evm-wallet.ts
frontend/src/types/: ethereum.d.ts
migrations/: 0001_quotes.up.sql  0002_lifecycle_events.down.sql  0002_lifecycle_events.up.sql  0003_chain_artifacts.down.sql  0003_chain_artifacts.up.sql  0004_miden_bootstrap.down.sql  0004_miden_bootstrap.up.sql
scripts/: anvil_bootstrap.sh  anvil_start.sh  ci.sh  evm_mock_tokens_bootstrap.sh  miden_node_genesis.sh  miden_node_start.sh
src/: lab.rs  lib.rs  main.rs  test_support.rs  types.rs
src/api/: agglayer.rs  demo.rs  deposit_submit.rs  errors.rs  healthz.rs  mod.rs  quote.rs  status.rs  tokens.rs  withdrawals.rs
src/chains/: agglayer.rs  evm.rs  miden.rs  miden_bootstrap.rs  miden_bridge_note.rs  miden_deposit_account.rs  miden_inbound.rs  miden_outbound.rs  mod.rs  profile.rs
src/core/: hardening.rs  lifecycle.rs  mod.rs  pricer.rs  state.rs
static/lab/: app.js  index.html  styles.css
tests/: e2e.rs  evm.rs  hardening.rs  lifecycle.rs  miden_bridge.rs  miden_node.rs  state.rs
tests/e2e/: inbound.rs  incomplete.rs  outbound.rs  refund.rs  restart_resume.rs
tests/e2e/common/: mod.rs
tools/walkthrough-video/: README.md  package-lock.json  package.json  tsconfig.json
tools/walkthrough-video/scripts/: record.mjs
tools/walkthrough-video/src/: Root.tsx  TerminalWalkthrough.tsx  Walkthrough.tsx
(+4 files in other folders)
